welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var M:Int = maxValue(num);
	var compteur:Int = 0
	for (i<-0 to 4) {
		compteur=compteur + seqInArray(num,M-i)
		for (j<-0 to num.length) {
			if (num(j)==M-i) {
				num(j)=num(j)-1
			}
		}
	}
}
def maxValue(nums:Array[Int]): Int = {
	var max:Int = nums(0)
	for (i<- 1 to nums.length-1) {
		if (nums(i)>max) {
			max=nums(i)
		}
	}
	return max
}
def seqInArray(T:Array[Int],n:Int): Int ={
	var cpt:Int = 0
	for (i<- 0 to T.length-1) {
		if ((T(i)==n) && (T(i-1)!=n)) {
			cpt = cpt +1
		}
	}
	return cpt
}
